--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
+    "gsap": "^3.12.5",
     "next": "14.2.3",
     "next-view-transitions": "^0.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
